tests/neg/scalaStandardRedefinition.scala
package scala {
  class Any() // error
}